fat nippl homepage

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <style>
 	#title {
 		text-align: center;
-		width: 50%;
+		width: 100%;
+	}
+
+	.middle {
+		position: absolute;
+		margin: auto;
+		text-align: center;
+		top: 10%;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 600px;
 	}
 </style>
 
-<img id="title">
+<div class="middle">
+	<img id="title">
+	<img src="static/img/home/home1.jpg" width="300px">
+</div>
 
 <script>
 	function randInt(min, max) {
