--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <style>
 	#title {
-		text-align: center;
 		width: 100%;
+	}
+
+	#entry {
+		width: 50%;
 	}
 
 	.middle {
@@ -15,13 +18,20 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
-		width: 600px;
+		width: 35%;
+	}
+
+	/* Mobile Styles */
+	@media only screen and (max-width: 650px) {
+		.middle {
+			width: 90%;
+		}
 	}
 </style>
 
 <div class="middle">
 	<img id="title">
-	<img src="static/img/home/home1.jpg" width="300px">
+	<img id="entry" src="static/img/home/home1.jpg">
 </div>
 
 <script>
