fat nipple responsive working

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 		left: 0;
 		width: 600px;
 	}
+
+	/* Mobile Styles */
+	@media only screen and (max-width: 650px) {
+		.middle {
+			width: 90%;
+		}
+	}
 </style>
 
 <div class="middle">
