fat nipple responsive tweak

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <title>fatnipple1.html</title>
 <script src="static/js/jquery-3.4.1.min.js"></script>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 <style>
 	body {
@@ -12,6 +13,7 @@
 	}
 
 	#home {
+		padding-top: 10px;
 		image-orientation: from-image;
 		max-height: 500px;
 		max-width: 50%;
@@ -26,7 +28,11 @@
 
 	@media screen and (max-width: 800px) {
 		#title {
-			width: 70%;
+			width: 80%;
+		}
+
+		#home {
+			max-width: 60%;
 		}
 
 		body {
