--- a/index.html
+++ b/index.html
@@ -57,3 +57,14 @@
 	$('#title').attr('src', `static/img/title/title (${randInt(0, N_titles)+1}).png`)
 	$('#home').attr('src', `static/img/home/home (${randInt(0, N_homes)+1}).png`)
 </script>
+
+<script>
+	(function(h,o,t,j,a,r){
+		h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+		h._hjSettings={hjid:1574691,hjsv:6};
+		a=o.getElementsByTagName('head')[0];
+		r=o.createElement('script');r.async=1;
+		r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+		a.appendChild(r);
+	})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
