fatnippl rmil update img

--- a/romil.html
+++ b/romil.html
@@ -13,6 +13,14 @@
         align-items: center;
         padding-top: 20px;
     }
+
+    img {
+        padding-top: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
 </style>
 
 <p>Uhh I was at a Brockhampton concert in Stanford and--</p>
@@ -29,3 +37,5 @@
         <source src="static/res/romil.mp3" type="audio/mp3">
     </audio>
 </div>
+
+<img src="static/img/home/home (13).jpg">
