--- a/romil.html
+++ b/romil.html
@@ -1,17 +1,13 @@
 <style>
     body {
         margin-top: 50px;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 
     p {
         text-align: center;
-    }
-
-    .audio-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-top: 20px;
+        font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
     }
 
     img {
@@ -20,6 +16,28 @@
         margin-left: auto;
         margin-right: auto;
         width: 50%;
+    }
+
+    .audio-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 10px;
+    }
+
+    @media screen and (max-width: 1050px) {
+        img {
+            width: 80%;
+        }
+
+        p {
+            font-size: large;
+            padding-bottom: 10px;
+        }
+
+        audio {
+            width: 60%;
+        }
     }
 </style>
 
