--- a/romil.html
+++ b/romil.html
@@ -25,13 +25,13 @@
         padding-top: 10px;
     }
 
-    @media screen and (max-width: 1050px) {
+    @media screen and (max-width: 1000px) {
         img {
-            width: 80%;
+            width: 100%;
         }
 
         p {
-            font-size: large;
+            font-size: 1.5rem;
             padding-bottom: 10px;
         }
 
@@ -41,7 +41,7 @@
     }
 </style>
 
-<p>Uhh I was at a Brockhampton concert in Stanford and--</p>
+<p>uhhh I was at a Brockhampton concert in Stanford and--</p>
 <p>and uhh Romil, their producer, was setting up the front of the stage as the--as their set was starting</p>
 <p>and I was at the front of the crowd so I said "hey Romil!" "take a picture" and I tossed him my disposable camera--I just chucked it onto the stage and he caught it</p>
 <p>and he was like "ok" and it took uh-- he like setup the flash and he took a picture of the crowd</p>
