fatnipple horn background

--- a/letmego.html
+++ b/letmego.html
@@ -12,12 +12,18 @@
 
     body {
         font-family: '1820 Modern';
+        background-image: url('static/img/fatnipple1.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         margin: 10%;
     }
 
     #line {
         text-align: center;
         cursor: pointer;
+        background-color: white;
+        padding: 10px;
 
         /* no select */
         -webkit-touch-callout: none;
