fatnipple responsive horn

--- a/letmego.html
+++ b/letmego.html
@@ -33,6 +33,13 @@
         -ms-user-select: none;
         user-select: none;
     }
+
+    @media screen and (max-width: 1000px) {
+        #line {
+            margin-top: 20%;
+            font-size: 2.5rem;
+        }
+    }
 </style>
 
 <h1 id="line" onclick="increment()">Hark, Triton, Hark!</h1>
