--- a/liftoff.html
+++ b/liftoff.html
@@ -12,15 +12,23 @@
 
 <h1 id="loader">Content loading... <span id="percent">0</span>%</h1>
 
-<div hidden id="sky" class="element" style="background: #547eb9; z-index: 0"></div>
+<div hidden id="sky" class="element" style="background: hsl(215, 42%, 53%); z-index: 0"></div>
 <img hidden id="cloud" class="element" src="static/img/flight/cloud.png" style="z-index: 10">
 <img hidden id="chung" class="element" src="static/img/flight/just chung.png" style="z-index: 10">
 <div hidden id="animation" class="element" style="z-index: 2"></div>
 <img hidden id="background-sky" class="element" style="z-index: 1" src="static/img/flight/no chung sky.png">
 
+<h1 id="hud" class="element" style="z-index: 100; width: 100%">
+    <span id="height">0</span>m, <span id="speed">0</span>m/s
+</h1>
+
 <script>
     var loader = document.getElementById('loader')
     var percent = document.getElementById('percent')
+
+    var hud = document.getElementById('hud')
+    var hud_height = document.getElementById('height')
+    var hud_speed = document.getElementById('speed')
 
     var sky = document.getElementById('sky')
     var background = document.getElementById('background-sky')
@@ -82,6 +90,7 @@
         centerElem(background)
         centerElem(animation)
         centerElem(chung)
+        centerElem(hud)
 
         if (height < window.innerHeight) sky.style.height = height
         else sky.style.height = window.innerHeight
@@ -162,7 +171,8 @@
     }
 
     var height = 0
-    var vert_speed = 15
+    var vert_initial = 15
+    var vert_speed = vert_initial
     var xposn = 0
     var chung_speed = 10
     var cloud_y = 9999
@@ -171,6 +181,12 @@
         sizeElements()
         height += vert_speed
         cloud_y += vert_speed * 0.7
+
+        var height_m = Math.floor(height / 5 / 60)
+        var speed_ms = vert_speed / 5
+
+        hud_height.innerText = height_m
+        hud_speed.innerText = speed_ms
 
         var xmin = -(window.innerWidth / 2)
         var xmax = window.innerWidth / 2
@@ -182,6 +198,11 @@
             cloud.style.zIndex = Math.floor(Math.random() * 2) + 10
             cloud_y = -getHeight(cloud)
             cloud_x = Math.floor(Math.random() * window.innerWidth) - (getWidth(cloud) / 2)
+        }
+
+        if ((height + vert_speed) % (100 * 5 * 60) <= vert_speed) {
+            vert_speed += 3
+            sky.style.background = `hsl(215, 42%, ${53 - (vert_speed - vert_initial) / 3}%)`
         }
 
         background.style.bottom = -height
